--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
         
 
     <!-- fixed buttons  -->
-    <div class="fixed">
-        <span>1</span>
-        <span>2</span>
-        <span>3</span>
-    </div>
+    <ul class="buttons">
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+    </ul>
+    
     <!-- end of fixed buttons -->
 
 </body>
